[Releng] Update generator for Java 17 Eclipse Ini task.